modules/gdscript/tests/scripts/analyzer/errors/typed_constructor_not_implemented.gd
func test():
	# Error
	# Typed conversion constructor checks if base and the provided type are compatible.
	var convert = float[int]([2.0, 40.0]);
